--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -16,7 +16,7 @@
 
         </LinearLayout>
         <LinearLayout
-            android:layout_width="180"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <ImageView
